--- a/app/docs/tilt/page.mdx
+++ b/app/docs/tilt/page.mdx
@@ -46,3 +46,7 @@ And example using the [Spotlight component](/docs/spotlight) with the Tilt compo
 | rotationFactor | number        | 15      | Controls the maximum rotation angle in degrees. |
 | isRevese       | boolean       | false   | Reverses the tilt effect's rotation direction.  |
 | springOptions  | SpringOptions |         | Spring options for the tilt effect.             |
+
+## Credits
+
+Initiated by [@AFPedreros](https://github.com/AFPedreros)
