feat: remove framer-motion, add motion

--- a/app/docs/accordion/page.mdx
+++ b/app/docs/accordion/page.mdx
@@ -55,14 +55,14 @@ Here, we apply `-rotate-180` to rotate the icon 180 degrees when its associated 
 
 ### Accordion
 
-| Prop          | Type                                        | Default | Description                                                   |
-| :------------ | :------------------------------------------ | :------ | :------------------------------------------------------------ |
-| children      | ReactNode                                   |         | The content elements of the accordion.                        |
-| className     | string                                      |         | Optional CSS class for styling the accordion container.       |
-| transition    | Transition                                  |         | Transition settings from framer-motion for animation effects. |
-| variants      | `{ expanded: Variant; collapsed: Variant }` |         | Custom variants for expanded and collapsed states.            |
-| expandedValue | React.Key \| null                           |         | Controlled expanded value.                                    |
-| onValueChange | (value: React.Key \| null) => void          |         | Callback function when the expanded value changes.            |
+| Prop          | Type                                        | Default | Description                                             |
+| :------------ | :------------------------------------------ | :------ | :------------------------------------------------------ |
+| children      | ReactNode                                   |         | The content elements of the accordion.                  |
+| className     | string                                      |         | Optional CSS class for styling the accordion container. |
+| transition    | Transition                                  |         | Transition settings from motion for animation effects.  |
+| variants      | `{ expanded: Variant; collapsed: Variant }` |         | Custom variants for expanded and collapsed states.      |
+| expandedValue | React.Key \| null                           |         | Controlled expanded value.                              |
+| onValueChange | (value: React.Key \| null) => void          |         | Callback function when the expanded value changes.      |
 
 ### AccordionItem
 
