--- a/app/docs/animated-background/page.mdx
+++ b/app/docs/animated-background/page.mdx
@@ -61,5 +61,5 @@ The `AnimatedBackground` component visually highlights selected items by sliding
 | defaultValue  | string                                                               |         | The default value to be used as the active item identifier.                                                                                        |
 | onValueChange | (newActiveId: string \| null) => void                                |         | Callback function that is called when the active item changes.                                                                                     |
 | className     | string                                                               |         | The class name to apply to the animated background for custom styling.                                                                             |
-| transition    | Transition                                                           |         | The transition effect from framer-motion to apply when changing the active item.                                                                   |
+| transition    | Transition                                                           |         | The transition effect from motion for animation effects.                                                                                           |
 | enableHover   | boolean                                                              | false   | Enables or disables the hover effect. When `enableHover` is true, spacing between children cannot be added.                                        |
