--- a/app/docs/animated-number/page.mdx
+++ b/app/docs/animated-number/page.mdx
@@ -54,4 +54,4 @@ Easily animate numbers.
 | :------------ | :------------ | :------ | :-------------------------------------------------------- |
 | value         | number        |         | The number to be animated.                                |
 | className     | string        |         | Optional CSS class for styling the number item container. |
-| springOptions | SpringOptions |         | Spring options from framer-motion for the animation.      |
+| springOptions | SpringOptions |         | Spring options from motion for the animation.             |
