--- a/app/docs/carousel/page.mdx
+++ b/app/docs/carousel/page.mdx
@@ -89,11 +89,11 @@ We can use `index` and `onIndexChange` to create custom indicators for the carou
 
 ### CarouselContent
 
-| Prop         | Type         | Default | Description                                             |
-| :----------- | :----------- | :------ | :------------------------------------------------------ |
-| `children`   | `ReactNode`  |         | The sliding elements or items of the carousel.          |
-| `className`  | `string`     |         | Optional CSS class for additional styling.              |
-| `transition` | `Transition` |         | Optional framer-motion transition for animating slides. |
+| Prop         | Type         | Default | Description                                      |
+| :----------- | :----------- | :------ | :----------------------------------------------- |
+| `children`   | `ReactNode`  |         | The sliding elements or items of the carousel.   |
+| `className`  | `string`     |         | Optional CSS class for additional styling.       |
+| `transition` | `Transition` |         | Optional motion transition for animating slides. |
 
 ### CarouselItem
 
