--- a/app/docs/cursor/page.mdx
+++ b/app/docs/cursor/page.mdx
@@ -53,6 +53,6 @@ A custom cursor component with optional spring animations. It can be globally ap
 | className        | string                                           |          | Optional CSS class for styling the custom cursor container.                                                   |
 | springConfig     | SpringOptions                                    |          | Configuration for the spring physics used in the cursor's movement.                                           |
 | attachToParent   | boolean                                          | false    | If `true`, the cursor will only be visible when hovering over its parent component.                           |
-| transition       | Transition                                       |          | Transition settings from framer-motion for animation effects.                                                 |
+| transition       | Transition                                       |          | Transition settings from motion for animation effects.                                                        |
 | variants         | Object (with initial, animated, exit properties) |          | Variants for controlling the animation states with specific properties for initial, animate, and exit states. |
 | onPositionChange | `(position: { x: number, y: number }) => void`   |          | Callback function that is called when the cursor position changes.                                            |
