--- a/app/docs/dialog/page.mdx
+++ b/app/docs/dialog/page.mdx
@@ -53,7 +53,7 @@ A dialog that smoothly transitions content into a focused view using layout anim
 | Prop       | Type       | Default | Description                                                         |
 | :--------- | :--------- | :------ | :------------------------------------------------------------------ |
 | children   | ReactNode  |         | The content of the dialog which could include triggers and content. |
-| transition | Transition |         | Transition settings from framer-motion for animation effects.       |
+| transition | Transition |         | Transition settings from motion for animation effects.              |
 
 ### DialogTrigger
 
