--- a/app/docs/transition-panel/page.mdx
+++ b/app/docs/transition-panel/page.mdx
@@ -45,7 +45,7 @@ Easy way to switch between different pieces of content with enter and exit anima
 | :------------- | :------------------------------------------- | :------ | :------------------------------------------------------------------------------- |
 | children       | React.ReactNode[]                            |         | The content that the panel will transition through.                              |
 | className      | string                                       |         | Optional CSS class to apply to the panel container for additional styling.       |
-| transition     | Transition                                   |         | The transition settings from framer-motion to control the animation effects.     |
+| transition     | Transition                                   |         | The transition settings from motion to control the animation effects.            |
 | activeIndex    | number                                       |         | The index of the currently active child element to display.                      |
 | variants       | Object (with enter, center, exit properties) |         | Variants for each animation state (enter, center, exit) to customize animations. |
-| ...motionProps | MotionProps                                  |         | Spread all additional framer-motion props to the motion.div component.           |
+| ...motionProps | MotionProps                                  |         | Spread all additional motion props to the motion.div component.                  |
