--- a/app/docs/page.mdx
+++ b/app/docs/page.mdx
@@ -4,7 +4,7 @@ Make your website look better with beautifully designed motion components.<br />
 Easy to use. Customizable. Open Source.
 Built for engineers, designers, and founders.
 
-Motion-Primitives offers a collection of reusable animated components built with Framer Motion and Tailwind CSS. Add smooth, engaging animations to your web projects, making them more interactive and enjoyable.
+Motion-Primitives offers a collection of reusable animated components built with Motion and Tailwind CSS. Add smooth, engaging animations to your web projects, making them more interactive and enjoyable.
 
 ## Vision
 
@@ -14,9 +14,9 @@ As a developer, I struggled to find practical, high-quality animated components 
 
 Each component has comprehensive examples and detailed documentation. You can use them directly or easily modify them to align with your custom UI kit, design system, or specific requirements.
 
-### Built around Framer Motion
+### Built around Motion
 
-All components are built with Framer Motion to ensure a solid foundation and showcase the library's capabilities. Future plans include versions using CSS and Tailwind CSS only.
+All components are built with [Motion](https://motion.dev/) to ensure a solid foundation and showcase the library's capabilities. Future plans include versions using CSS and Tailwind CSS only.
 
 ### Open source and community-driven
 
