--- a/app/docs/morphing-dialog/page.mdx
+++ b/app/docs/morphing-dialog/page.mdx
@@ -1,45 +1,45 @@
 export const metadata = {
-  title: 'Dialog - Motion-Primitives',
+  title: 'Morphing Dialog - Motion-Primitives',
   description:
-    'Display content in a focused view with smooth transitions. Ideal for showcasing details like images and texts in a prominent overlay.',
+    'A dialog that uses layout animations to transition content into a focused view. It supports click-outside and escape key functionalities for closing.',
 };
 
-import { DialogBasicOne } from './dialog-basic-1';
-import { DialogBasicTwo } from './dialog-basic-2';
-import { DialogBasicImage } from './dialog-image';
+import { MorphingDialogBasicOne } from './morphing-dialog-basic-1';
+import { MorphingDialogBasicTwo } from './morphing-dialog-basic-2';
+import { MorphingDialogBasicImage } from './morphing-dialog-image';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
-# Dialog
+# Morphing Dialog
 
-A dialog that smoothly transitions content into a focused view using layout animations. It's perfect for showcasing details like images and texts in a more prominent, centered overlay. The dialog is easy to manage with click-outside and escape key functionalities to close.
+A dialog that uses layout animations to transition content into a focused view. It supports click-outside and escape key functionalities for closing.
 
 ## Examples
 
-### Dialog Basic
+### Morphing Dialog Basic
 
 <ComponentCodePreview
-  component={<DialogBasicOne />}
-  filePath='app/docs/dialog/dialog-basic-1.tsx'
+  component={<MorphingDialogBasicOne />}
+  filePath='app/docs/morphing-dialog/morphing-dialog-basic-1.tsx'
 />
 
-### Dialog Basic 2
+### Morphing Dialog Basic 2
 
 <ComponentCodePreview
-  component={<DialogBasicTwo />}
-  filePath='app/docs/dialog/dialog-basic-2.tsx'
+  component={<MorphingDialogBasicTwo />}
+  filePath='app/docs/morphing-dialog/morphing-dialog-basic-2.tsx'
 />
 
-### Dialog Image
+### Morphing Dialog Image
 
 <ComponentCodePreview
-  component={<DialogBasicImage />}
-  filePath='app/docs/dialog/dialog-image.tsx'
+  component={<MorphingDialogBasicImage />}
+  filePath='app/docs/morphing-dialog/morphing-dialog-image.tsx'
 />
 
 ## Code
 
-<CodeBlock filePath='components/core/dialog.tsx' />
+<CodeBlock filePath='components/core/morphing-dialog.tsx' />
 
 **Please add:**
 
@@ -48,14 +48,14 @@ A dialog that smoothly transitions content into a focused view using layout anim
 
 ## Component API
 
-### Dialog
+### MorphingDialog
 
 | Prop       | Type       | Default | Description                                                         |
 | :--------- | :--------- | :------ | :------------------------------------------------------------------ |
 | children   | ReactNode  |         | The content of the dialog which could include triggers and content. |
 | transition | Transition |         | Transition settings from motion for animation effects.              |
 
-### DialogTrigger
+### MorphingDialogTrigger
 
 | Prop       | Type                | Default | Description                                                      |
 | :--------- | :------------------ | :------ | :--------------------------------------------------------------- |
@@ -64,7 +64,7 @@ A dialog that smoothly transitions content into a focused view using layout anim
 | style      | React.CSSProperties |         | Inline styles for the trigger element.                           |
 | triggerRef | React.RefObject     |         | Ref to attach to the trigger element, useful for managing focus. |
 
-### DialogContent
+### MorphingDialogContent
 
 | Prop      | Type                | Default | Description                                              |
 | :-------- | :------------------ | :------ | :------------------------------------------------------- |
@@ -72,7 +72,7 @@ A dialog that smoothly transitions content into a focused view using layout anim
 | className | string              |         | Optional CSS class for styling the content container.    |
 | style     | React.CSSProperties |         | Inline styles for the content container.                 |
 
-### DialogTitle
+### MorphingDialogTitle
 
 | Prop      | Type                | Default | Description                               |
 | :-------- | :------------------ | :------ | :---------------------------------------- |
@@ -80,7 +80,7 @@ A dialog that smoothly transitions content into a focused view using layout anim
 | className | string              |         | Optional CSS class for the title element. |
 | style     | React.CSSProperties |         | Inline styles for the title element.      |
 
-### DialogSubtitle
+### MorphingDialogSubtitle
 
 | Prop      | Type                | Default | Description                                  |
 | :-------- | :------------------ | :------ | :------------------------------------------- |
@@ -88,7 +88,7 @@ A dialog that smoothly transitions content into a focused view using layout anim
 | className | string              |         | Optional CSS class for the subtitle element. |
 | style     | React.CSSProperties |         | Inline styles for the subtitle element.      |
 
-### DialogDescription
+### MorphingDialogDescription
 
 | Prop                   | Type      | Default | Description                                              |
 | :--------------------- | :-------- | :------ | :------------------------------------------------------- |
@@ -97,7 +97,7 @@ A dialog that smoothly transitions content into a focused view using layout anim
 | disableLayoutAnimation | boolean   | false   | If true, disables layout animations for the description. |
 | variants               | Object    |         | Variants for the animation states of the description.    |
 
-### DialogImage
+### MorphingDialogImage
 
 | Prop      | Type                | Default | Description                               |
 | :-------- | :------------------ | :------ | :---------------------------------------- |
@@ -106,7 +106,7 @@ A dialog that smoothly transitions content into a focused view using layout anim
 | className | string              |         | Optional CSS class for the image element. |
 | style     | React.CSSProperties |         | Inline styles for the image element.      |
 
-### DialogClose
+### MorphingDialogClose
 
 | Prop      | Type      | Default | Description                                                       |
 | :-------- | :-------- | :------ | :---------------------------------------------------------------- |
