feat: add usePreventScroll, prevent scroll on iOS

--- a/app/docs/dialog/page.mdx
+++ b/app/docs/dialog/page.mdx
@@ -58,6 +58,11 @@ You can customize the backdrop using the `backdrop:` prefix on `DialogContent`, 
 
 <CodeBlock filePath='components/core/dialog.tsx' />
 
+**Please add:**
+
+- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
+- [usePreventScroll](https://github.com/ibelick/motion-primitives/blob/main/hooks/usePreventScroll.tsx)
+
 ## Component API
 
 ### Dialog
