--- a/app/docs/installation/page.mdx
+++ b/app/docs/installation/page.mdx
@@ -7,34 +7,31 @@ import CodeBlock from '@/components/website/code-block';
 
 # Installation
 
-Motion-Primitives is built on top of two libraries:
+<Steps>
 
-- [Motion](https://motion.dev/) for animations
-- [Tailwind CSS](https://tailwindcss.com/) for styling
-
-This project is designed specifically for React projects.
-
-## Quick Start
-
-1. **Install Tailwind CSS**
+<Step>Install Tailwind CSS</Step>
 
 Components are styled using Tailwind CSS. Follow the [official installation guide](https://tailwindcss.com/docs/installation) to add it to your project.
 
-2. **Install Motion**
+<Step>Install Motion</Step>
+
+Components are animated using [Motion](https://motion.dev/).
 
 <CodeBlock code={`npm install motion`} lang='bash' className='h-[52px]' />
 
-3. **Add the utility helper**
+<Step>Add the utility helper</Step>
 
 Create a `lib/utils.ts` file to manage Tailwind CSS classes:
 
 <CodeBlock filePath='lib/utils.ts' lang='ts' />
 
-4. **Install icons**
+<Step>Install icons</Step>
 
 Add [Lucide React](https://lucide.dev/) icons:
 
 <CodeBlock code={`npm install lucide-react`} lang='bash' className='h-[52px]' />
+
+</Steps>
 
 ## Project Structure
 
