--- a/app/docs/accordion/page.mdx
+++ b/app/docs/accordion/page.mdx
@@ -43,13 +43,36 @@ Here, we apply `-rotate-180` to rotate the icon 180 degrees when its associated 
   filePath='app/docs/accordion/accordion-variant.tsx'
 />
 
-## Code
+## Installation
+
+<Tabs defaultValue="cli">
+
+<TabsList>
+  <TabsTrigger value='cli'>CLI</TabsTrigger>
+  <TabsTrigger value='manual'>Manual</TabsTrigger>
+</TabsList>
+
+<TabsContent value="cli">
+
+<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+
+</TabsContent>
+
+<TabsContent value="manual">
+
+<Steps>
+
+<Step>Copy and paste the following code into your project.</Step>
 
 <CodeBlock filePath='components/core/accordion.tsx' />
 
-**Please add:**
+<Step>Update the import paths to match your project setup.</Step>
 
-- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
+</Steps>
+
+</TabsContent>
+
+</Tabs>
 
 ## Component API
 
