docs: add installation tabs for each components

--- a/app/docs/in-view/page.mdx
+++ b/app/docs/in-view/page.mdx
@@ -43,9 +43,36 @@ Images are from [cosmos - oui are one ::](https://www.cosmos.so/biancadjardins/o
   hasReTrigger
 />
 
-## Code
+## Installation
+
+<Tabs defaultValue="cli">
+
+<TabsList>
+  <TabsTrigger value='cli'>CLI</TabsTrigger>
+  <TabsTrigger value='manual'>Manual</TabsTrigger>
+</TabsList>
+
+<TabsContent value="cli">
+
+<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+
+</TabsContent>
+
+<TabsContent value="manual">
+
+<Steps>
+
+<Step>Copy and paste the following code into your project.</Step>
 
 <CodeBlock filePath='components/core/in-view.tsx' />
+
+<Step>Update the import paths to match your project setup.</Step>
+
+</Steps>
+
+</TabsContent>
+
+</Tabs>
 
 ## Component API
 
