--- a/app/docs/dock/page.mdx
+++ b/app/docs/dock/page.mdx
@@ -22,13 +22,36 @@ A versatile UI element that provides a flexible and customizable way to organize
   hasReTrigger
 />
 
-## Code
+## Installation
+
+<Tabs defaultValue="cli">
+
+<TabsList>
+  <TabsTrigger value='cli'>CLI</TabsTrigger>
+  <TabsTrigger value='manual'>Manual</TabsTrigger>
+</TabsList>
+
+<TabsContent value="cli">
+
+<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+
+</TabsContent>
+
+<TabsContent value="manual">
+
+<Steps>
+
+<Step>Copy and paste the following code into your project.</Step>
 
 <CodeBlock filePath='components/core/dock.tsx' />
 
-**Please add:**
+<Step>Update the import paths to match your project setup.</Step>
 
-- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
+</Steps>
+
+</TabsContent>
+
+</Tabs>
 
 ## Component API
 
