--- a/app/docs/text-shimmer/page.mdx
+++ b/app/docs/text-shimmer/page.mdx
@@ -31,13 +31,36 @@ You can use the `[--base-color]` and `[--base-gradient-color]` CSS variables to 
   filePath='app/docs/text-shimmer/text-shimmer-color.tsx'
 />
 
-## Code
+## Installation
+
+<Tabs defaultValue="cli">
+
+<TabsList>
+  <TabsTrigger value='cli'>CLI</TabsTrigger>
+  <TabsTrigger value='manual'>Manual</TabsTrigger>
+</TabsList>
+
+<TabsContent value="cli">
+
+<CodeBlock code={`#todo`} lang='bash' className='h-[52px]' />
+
+</TabsContent>
+
+<TabsContent value="manual">
+
+<Steps>
+
+<Step>Copy and paste the following code into your project.</Step>
 
 <CodeBlock filePath='components/core/text-shimmer.tsx' />
 
-**Please add:**
+<Step>Update the import paths to match your project setup.</Step>
 
-- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
+</Steps>
+
+</TabsContent>
+
+</Tabs>
 
 ## Component API
 
